--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -162,16 +162,16 @@ header.site-header .main-navigation ul.nav-menu > li > a {
 header.site-header .main-navigation ul.nav-menu > li > a:hover {
   color: #faa61a;
 }
-/* line 45, ../sass/components/_header.scss */
-header.site-header .main-navigation ul.nav-menu > li.current-menu-item .sub-menu, header.site-header .main-navigation ul.nav-menu > li.current_page_ancestor .sub-menu {
+/* line 46, ../sass/components/_header.scss */
+header.site-header .main-navigation ul.nav-menu > li.current-menu-item .sub-menu, header.site-header .main-navigation ul.nav-menu > li.current-page-ancestor .sub-menu, header.site-header .main-navigation ul.nav-menu > li.current_page_ancestor .sub-menu {
   display: block;
   z-index: 5;
 }
-/* line 51, ../sass/components/_header.scss */
-header.site-header .main-navigation ul.nav-menu > li.current-menu-item > a, header.site-header .main-navigation ul.nav-menu > li.current_page_ancestor > a {
+/* line 53, ../sass/components/_header.scss */
+header.site-header .main-navigation ul.nav-menu > li.current-menu-item > a, header.site-header .main-navigation ul.nav-menu > li.current-page-ancestor > a, header.site-header .main-navigation ul.nav-menu > li.current_page_ancestor > a {
   color: #faa61a;
 }
-/* line 58, ../sass/components/_header.scss */
+/* line 60, ../sass/components/_header.scss */
 header.site-header .main-navigation ul.sub-menu {
   width: 100%;
   background-color: #fff;
@@ -179,11 +179,11 @@ header.site-header .main-navigation ul.sub-menu {
   left: 0;
   z-index: 10;
 }
-/* line 64, ../sass/components/_header.scss */
+/* line 66, ../sass/components/_header.scss */
 header.site-header .main-navigation ul.sub-menu li {
   margin-right: 10px;
 }
-/* line 67, ../sass/components/_header.scss */
+/* line 69, ../sass/components/_header.scss */
 header.site-header .main-navigation ul.sub-menu a {
   background-color: #fff;
   line-height: 1;
@@ -193,27 +193,27 @@ header.site-header .main-navigation ul.sub-menu a {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: bold;
 }
-/* line 79, ../sass/components/_header.scss */
+/* line 81, ../sass/components/_header.scss */
 header.site-header .main-navigation ul #nav-search {
   float: right;
   margin: 0 15px 0;
 }
-/* line 83, ../sass/components/_header.scss */
+/* line 85, ../sass/components/_header.scss */
 header.site-header .main-navigation ul #nav-search form {
   width: 200px;
   height: 8px;
 }
-/* line 87, ../sass/components/_header.scss */
+/* line 89, ../sass/components/_header.scss */
 header.site-header .main-navigation ul #nav-search form input {
   float: left;
   border-radius: 0;
 }
-/* line 90, ../sass/components/_header.scss */
+/* line 92, ../sass/components/_header.scss */
 header.site-header .main-navigation ul #nav-search form input.search-field {
   height: 22px;
   margin: 3px 0;
 }
-/* line 94, ../sass/components/_header.scss */
+/* line 96, ../sass/components/_header.scss */
 header.site-header .main-navigation ul #nav-search form input.search-submit {
   color: #FFF;
   background: #000;
@@ -223,16 +223,16 @@ header.site-header .main-navigation ul #nav-search form input.search-submit {
   margin-top: 3px;
   margin-left: 4px;
 }
-/* line 112, ../sass/components/_header.scss */
+/* line 114, ../sass/components/_header.scss */
 header.site-header #header-spacer {
   background-color: #000;
   height: 10px;
 }
-/* line 117, ../sass/components/_header.scss */
+/* line 119, ../sass/components/_header.scss */
 header.site-header #header-right-rail {
   float: right;
 }
-/* line 119, ../sass/components/_header.scss */
+/* line 121, ../sass/components/_header.scss */
 header.site-header #header-right-rail a {
   width: 120px;
   padding: 5px 0px;
@@ -247,12 +247,12 @@ header.site-header #header-right-rail a {
   text-transform: uppercase;
   text-decoration: none;
 }
-/* line 135, ../sass/components/_header.scss */
+/* line 137, ../sass/components/_header.scss */
 header.site-header #header-right-rail a:hover {
   color: #000000;
   cursor: pointer;
 }
-/* line 140, ../sass/components/_header.scss */
+/* line 142, ../sass/components/_header.scss */
 header.site-header #header-right-rail .donate {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(250, 145, 26, 0.87)), color-stop(63%, rgba(250, 145, 26, 0.87)), color-stop(100%, rgba(216, 107, 23, 0.87)));
   background-image: -webkit-linear-gradient(top, rgba(250, 145, 26, 0.87) 0%, rgba(250, 145, 26, 0.87) 63%, rgba(216, 107, 23, 0.87) 100%);
@@ -260,7 +260,7 @@ header.site-header #header-right-rail .donate {
   background-image: -o-linear-gradient(top, rgba(250, 145, 26, 0.87) 0%, rgba(250, 145, 26, 0.87) 63%, rgba(216, 107, 23, 0.87) 100%);
   background-image: linear-gradient(top, rgba(250, 145, 26, 0.87) 0%, rgba(250, 145, 26, 0.87) 63%, rgba(216, 107, 23, 0.87) 100%);
 }
-/* line 144, ../sass/components/_header.scss */
+/* line 146, ../sass/components/_header.scss */
 header.site-header #header-right-rail .buy-tickets a {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(198, 9, 16, 0.87)), color-stop(63%, rgba(198, 9, 16, 0.87)), color-stop(100%, rgba(150, 10, 12, 0.87)));
   background-image: -webkit-linear-gradient(top, rgba(198, 9, 16, 0.87) 0%, rgba(198, 9, 16, 0.87) 63%, rgba(150, 10, 12, 0.87) 100%);
@@ -269,7 +269,7 @@ header.site-header #header-right-rail .buy-tickets a {
   background-image: linear-gradient(top, rgba(198, 9, 16, 0.87) 0%, rgba(198, 9, 16, 0.87) 63%, rgba(150, 10, 12, 0.87) 100%);
   height: 50px;
 }
-/* line 148, ../sass/components/_header.scss */
+/* line 150, ../sass/components/_header.scss */
 header.site-header #header-right-rail .buy-tickets a .button-text {
   position: absolute;
   bottom: 11px;
